--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,7 +29,11 @@
               <h6 class="card-title mb-1">{{this.name}}</h6>
 
               <div class="restaurant-category mb-1">
-                <i class="fas fa-utensils pr-2"></i>{{this.category}}
+                <i class="fas fa-utensils pr-2"></i> {{this.category}}
+              </div>
+
+              <div class="restaurant-rating mb-1">
+                <i class="fa-solid fa-thumbs-up pr-2"></i> {{this.rating}}
               </div>
 
               <span class="badge badge-pill badge-danger font-weight-normal">
