--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,7 @@
     <div class="col-md-10 col-12 mx-auto">
       <div class="row row-cols-sm-3">
         {{#each restaurants}}
-        <a href="/restaurants/{{this.id}}" class="text-secondary">
+        <a href="/restaurants/{{this._id}}" class="text-secondary">
           <div class="card mb-3">
             <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
             <div class="card-body p-3">
@@ -35,6 +35,11 @@
               <div class="restaurant-rating mb-1">
                 <i class="fa-solid fa-thumbs-up pr-2"></i> {{this.rating}}
               </div>
+            </div>
+            <div class="card-foot">
+              <button>Edit</button>
+              <button>Detail</button>
+              <button>Delete</button>
             </div>
           </div>
         </a>
