--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,10 +36,15 @@
                 <i class="fa-solid fa-thumbs-up pr-2"></i> {{this.rating}}
               </div>
             </div>
-            <div class="card-body justify-content-md-end">
-              <a class="btn btn-outline-success btn-sm" href="./restaurants/{{ this._id }}/edit">Edit</a>
-              <a class="btn btn-outline-secondary btn-sm" href="./restaurants/{{ this._id }}">Detail</a>
-              <button class="btn btn-outline-danger btn-sm" type="submit">Delete</button>
+
+            <div class="d-flex justify-content-md-end flex-wrap mb-3">
+              <a href="./restaurants/{{ this._id }}/edit"><button
+                  class="btn btn-outline-success btn-sm">Edit</button></a>
+              <a href="./restaurants/{{ this._id }}"><button
+                  class="btn btn-outline-secondary btn-sm">Detail</button></a>
+              <form action="/restaurants/{{this._id}}/delete" method="POST">
+                <button type="submit" class="btn btn-outline-danger btn-sm">Delete</button>
+              </form>
             </div>
           </div>
         </a>
