--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,7 @@
     <div class="col-md-10 col-12 mx-auto">
       <div class="row row-cols-sm-3">
         {{#each restaurants}}
-        <a href="/restaurants/{{this._id}}" class="text-secondary">
+        <div class="col">
           <div class="card mb-3">
             <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
             <div class="card-body p-3">
@@ -37,7 +37,7 @@
               </div>
             </div>
 
-            <div class="d-flex justify-content-md-end flex-wrap mb-3">
+            <div class="d-flex justify-content-md-end flex-wrap m-3">
               <a href="./restaurants/{{ this._id }}/edit"><button
                   class="btn btn-outline-success btn-sm">Edit</button></a>
               <a href="./restaurants/{{ this._id }}"><button
@@ -47,7 +47,7 @@
               </form>
             </div>
           </div>
-        </a>
+        </div>
         {{/each}}
       </div>
     </div>
