--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,7 +1,7 @@
 <h1 class="mb-1 restaurant-show-title">編輯餐廳資訊 - {{ restaurant.name }}</h1>
 
 <div class="container">
-  <form action="/restaurants/{{ restaurant._id}}/edit" method="POST">
+  <form action="/restaurants/{{ restaurant._id}}/?_method=PUT" method="POST">
     <div class="form-floating mb-3">
       <input type="text" class="form-control" id="name" placeholder="蟹堡王" name="name" value="{{ restaurant.name }}"
         required>
