--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,13 +2,23 @@
 <div class="container search-bar">
   <div class="search-bar-outer">
     <div class="search-bar-inner">
+      <h4 class="mb-2">尋找餐廳：</h4>
       <form action="/search">
-        <h4 class="mb-2">尋找餐廳：</h4>
-        <div class="input-group">
-          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
-            value="{{keyword}}" aria-describedby="search-button">
-          <div class="input-group-append">
-            <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
+        <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2">
+          <div class="input-group mb-2 mb-sm-0 mr-sm-2">
+            <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
+              value="{{keyword}}" aria-describedby="search-button">
+              <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
+              
+            </div>
+            <div class="input-group">
+              <select class="form-select" name="sort" id="sort">
+                <option>A > Z</option>
+                <option>Z > A</option>
+                <option>類別</option>
+                <option>地區</option>
+              </select>
+            </div>
           </div>
         </div>
       </form>
