--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,22 +8,23 @@
           <div class="input-group mb-2 mb-sm-0 mr-sm-2">
             <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
               value="{{keyword}}" aria-describedby="search-button">
-              <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
-              
-            </div>
-            <div class="input-group">
-              <select class="form-select" name="sort" id="sort">
-                <option>A > Z</option>
-                <option>Z > A</option>
-                <option>類別</option>
-                <option>地區</option>
-              </select>
-            </div>
+            <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
+
+          </div>
+          <div class="input-group">
+            <select class="form-select" name="sort" id="sort">
+              <option selected>Sort</option>
+              <option value="">A > Z</option>
+              <option>Z > A</option>
+              <option>類別</option>
+              <option>地區</option>
+            </select>
           </div>
         </div>
-      </form>
     </div>
+    </form>
   </div>
+</div>
 </div>
 
 <!-- restaurant list -->
