--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,9 +19,16 @@
         <a class="navbar-brand" href="/">
           <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
             width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
-          我的餐廳清單
+          {{#if isAuthenticated}}{{ user.name }}{{/if}}的餐廳清單
         </a>
-        <a class="navbar-brand d-inline-block align-top" href="/restaurants/new">新增餐廳</a>
+        {{#if isAuthenticated}}
+        <div class="navbar-brand d-inline-block align-top">
+          <a class="navbar-brand" href="/restaurants/new">新增餐廳</a>
+          <a class="navbar-brand" href="/users/logout">登出</a>
+        </div>
+        {{else}}
+        <a class="navbar-brand d-inline-block align-top" href="/users/login">登入</a>
+        {{/if}}
       </div>
     </nav>
     <div class="banner"></div>
