--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,22 +1,22 @@
-<div class="row mt-5">
+<div class="row user-card mb-3">
   <div class="col-md-6 m-auto">
     <div class="card card-body">
-      <h1 class="text-center mt-3">Login</h1>
+      <h1 class="text-center mt-3">登入</h1>
       {{> message}}
       <form action="/users/login" method="POST">
         <div class="mb-3">
-          <label for="email" class="mb-2">Email</label>
-          <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email">
+          <label for="email" class="mb-2">電子信箱 Email</label>
+          <input type="email" id="email" name="email" class="form-control" placeholder="輸入電子信箱">
         </div>
         <div class="mb-3">
-          <label for="password" class="mb-2">Password</label>
-          <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password">
+          <label for="password" class="mb-2">密碼 Password</label>
+          <input type="password" id="password" name="password" class="form-control" placeholder="輸入密碼">
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
-        <a href="/auth/facebook" class="btn btn-info btn-block">Facebook Login</a>
+        <button type="submit" class="btn btn-primary btn-block">登入</button>
+        <a href="/auth/facebook" class="btn btn-info btn-block">臉書登入</a>
       </form>
       <p class="lead mt-4">
-        No Account? <a href="/users/register">Register</a>
+        尚未成為會員？ <a href="/users/register">按此註冊</a>
       </p>
     </div>
   </div>
