--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,33 +1,32 @@
-<div class="row mt-5">
+<div class="row user-card mb-3">
   <div class="col-md-6 m-auto">
     <div class="card card-body">
-      <h1 class="text-center mt-3">Register</h1>
+      <h1 class="text-center mt-3">註冊會員</h1>
       {{> message}}
       <form action="/users/register" method="POST">
         <div class="mb-3">
-          <label for="name" class="mb-2">Name</label>
-          <input type="text" id="name" name="name" class="form-control" placeholder="Enter Name" value="{{ name }}">
+          <label for="name" class="mb-2">姓名</label>
+          <input type="text" id="name" name="name" class="form-control" placeholder="輸入姓名" value="{{ name }}">
         </div>
         <div class="mb-3">
-          <label for="email" class="mb-2">Email</label>
-          <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email"
-            value="{{ email }}">
+          <label for="email" class="mb-2">電子信箱</label>
+          <input type="email" id="email" name="email" class="form-control" placeholder="輸入電子信箱" value="{{ email }}">
         </div>
         <div class="mb-3">
-          <label for="password" class="mb-2">Password</label>
-          <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password"
+          <label for="password" class="mb-2">密碼</label>
+          <input type="password" id="password" name="password" class="form-control" placeholder="輸入密碼"
             value="{{ password }}">
         </div>
         <div class="mb-3">
-          <label for="confirmPassword" class="mb-2">Confirm Password</label>
-          <input type="password" id="confirmPassword" name="confirmPassword" class="form-control"
-            placeholder="Confirm Password" value="{{ confirmPassword }}">
+          <label for="confirmPassword" class="mb-2">密碼驗證</label>
+          <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" placeholder="再次輸入密碼"
+            value="{{ confirmPassword }}">
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Register</button>
-        <a href="/auth/facebook" class="btn btn-info btn-block">Facebook Login</a>
+        <button type="submit" class="btn btn-primary btn-block">註冊</button>
+        <a href="/auth/facebook" class="btn btn-info btn-block">臉書登入</a>
       </form>
       <p class="lead mt-4">
-        Have An Account? <a href="/users/login">Login</a>
+        已經成為會員？ <a href="/users/login">點此登入</a>
       </p>
     </div>
   </div>
